@@ -1,6 +1,8 @@
 * V1.12.3.1
   * Fixed ElasticSearch indexing error when index is empty
   * Fixed remote repo access
+  * Added experimental mode to support multiple aliases for the same UID
+    to be able to push renamed components to the cKnowledge.io portal
 
 * V1.12.3
   * improved tests on Linux, MacOS and Windows
